Updated to new version of site

--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -4,6 +4,14 @@
     color: whitesmoke;
 }
 
-Button {
-    color: steelblue;
-}
+
+
+@media (max-width: 765px) {
+    .navbar{
+      float: none !important;
+      display: inline-block !important;
+    }
+    .navbar{
+      float: none !important;
+    }
+  }
