--- a/src/Rating/RatingCards/RatingCards.css
+++ b/src/Rating/RatingCards/RatingCards.css
@@ -1,3 +1,7 @@
-.cardStyle.Button{
-    background-color: steelblue;
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: stretch;
+    flex-direction: row;
 }
